--- a/formation-chauffe-piscine/index.html
+++ b/formation-chauffe-piscine/index.html
@@ -709,7 +709,7 @@ ga('send', 'pageview');
 
     <div id="exitpopup-modal">
       <div class="underlay"></div>
-	  <div class="exitpopup-modal-window" style="width:400px !important; height:300px !important;">
+	  <div class="exitpopup-modal-window" style="width:500px !important; height:400px !important;">
         <div class="modal-title" style="background-color:#ffffff !important;">
           <h3>Combien pourriez vous économiser ?</h3>
         </div>
@@ -750,34 +750,18 @@ ga('send', 'pageview');
     color: #c0ccda;
     border-width: px;
   }
-</style><link rel="stylesheet" href="https://assets.sendinblue.com/component/form/2ef8d8058c0694a305b0.css"><link rel="stylesheet" href="https://assets.sendinblue.com/component/clickable/b056d6397f4ba3108595.css"><link rel="stylesheet" href="https://assets.sendinblue.com/component/progress-indicator/f86d65a4a9331c5e2851.css"><link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css"><div class="sib-form" style="text-align: center;
-         background-color: #ffffff;                                 ">
+</style><link rel="stylesheet" href="https://assets.sendinblue.com/component/form/2ef8d8058c0694a305b0.css"><link rel="stylesheet" href="https://assets.sendinblue.com/component/clickable/b056d6397f4ba3108595.css"><link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css"><div class="sib-form" style="text-align: center;
+         background-color: #ffffff;                                           ">
   <div id="sib-form-container" class="sib-form-container">
-    <div id="error-message" class="sib-form-message-panel" style=" font-size:12px; text-align:left; font-family:" helvetica sans-serif color: background-color: border-radius:3px border-width:px border-color: max-width:540px>
-      <div class="sib-form-message-panel__text sib-form-message-panel__text--center">
-        <svg viewbox="0 0 512 512" class="sib-icon sib-notification__icon"><path d="M256 40c118.621 0 216 96.075 216 216 0 119.291-96.61 216-216 216-119.244 0-216-96.562-216-216 0-119.203 96.602-216 216-216m0-32C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm-11.49 120h22.979c6.823 0 12.274 5.682 11.99 12.5l-7 168c-.268 6.428-5.556 11.5-11.99 11.5h-8.979c-6.433 0-11.722-5.073-11.99-11.5l-7-168c-.283-6.818 5.167-12.5 11.99-12.5zM256 340c-15.464 0-28 12.536-28 28s12.536 28 28 28 28-12.536 28-28-12.536-28-28-28z"></path></svg><span class="sib-form-message-panel__inner-text">
-                          Your subscription could not be saved. Please try again.
-                      </span>
-      </div>
-    </div>
-    <div></div>
-    <div id="success-message" class="sib-form-message-panel" style=" font-size:12px; text-align:left; font-family:" helvetica sans-serif color: background-color: border-radius:3px border-width:px border-color: max-width:540px>
-      <div class="sib-form-message-panel__text sib-form-message-panel__text--center">
-        <svg viewbox="0 0 512 512" class="sib-icon sib-notification__icon"><path d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 464c-118.664 0-216-96.055-216-216 0-118.663 96.055-216 216-216 118.664 0 216 96.055 216 216 0 118.663-96.055 216-216 216zm141.63-274.961L217.15 376.071c-4.705 4.667-12.303 4.637-16.97-.068l-85.878-86.572c-4.667-4.705-4.637-12.303.068-16.97l8.52-8.451c4.705-4.667 12.303-4.637 16.97.068l68.976 69.533 163.441-162.13c4.705-4.667 12.303-4.637 16.97.068l8.451 8.52c4.668 4.705 4.637 12.303-.068 16.97z"></path></svg><span class="sib-form-message-panel__inner-text">
-                          Your subscription has been successful.
-                      </span>
-      </div>
-    </div>
-    <div></div>
-    <div id="sib-container" class="sib-container--large sib-container--vertical" style=" text-align:center; background-color:rgba(255,255,255,1); max-width:540px; border-radius:3px; border-width:0px; border-color:#C0CCD9; border-style:solid;">
-      <form id="sib-form" method="POST" action="https://sibforms.com/serve/MUIEAMDUXYK29dOgw4HfgQv_Akgtps9qZapdknvGSCx5abEuviqqJYg9t-6gyzYNNUbp3sRy8sgnij-K9bQOgcsfaBe3PkyU5ML0Jg7tRbp1kvSFT8iKYDd3DWDcMJr4X0J0nMMURR3dyolANHISsNcucZ_8Cawe1dunI9jUTWkwHRIuq4EWYQ3MeKWWt2EJdx3eYhl8hU028LjW" data-type="subscription">
+    <div id="sib-container" class="sib-container--large sib-container--horizontal" style=" text-align:center; background-color:rgba(255,255,255,1); max-width:540px; border-radius:3px; border-width:0px; border-color:#C0CCD9; border-style:solid;">
+      <form id="sib-form" method="POST" action="https://sibforms.com/serve/MUIEAHa7FJ_2FP63KgyKJ1wYS1R492wCTlsx2p7NICKXrqyR6mMDyxgmyGrfBbNS08gZZI2IrM98OP7ghRGIOgbheHmmJ4O7IaUygyKL3ISntoAOqjJyD3rMpQ3k23u3U3rD2nZWMcRSgyh4e3Wjgr3TD8LmN7kc15zBMiVkmXQd2zSvd9ZIYOZ1LO5vMn75NMULfS9Tx39fb0O2">
         <div style="padding: 8px 0;">
-          <div class="sib-form-block" style=" font-size:24px; text-align:left; font-weight:700; font-family:" helvetica sans-serif color: background-color:transparent border-width:px>
+          <div class="sib-form-block" style=" font-size:16px; text-align:left; font-weight:700; font-family:" helvetica sans-serif color: background-color:transparent border-width:px>
             <p>Calculez vos économies</p>
           </div>
         </div>
         <div style="padding: 8px 0;">
-          <div class="sib-form-block" style=" font-size:16px; text-align:left; font-family:" helvetica sans-serif color: background-color:transparent border-width:px>
+          <div class="sib-form-block" style=" font-size:12px; text-align:left; font-family:" helvetica sans-serif color: background-color:transparent border-width:px>
             <div class="sib-text-form-block">
               <p>D'un simple clic, notre simulateur vous permet d'obtenir une estimation précise de l'énergie solaire disponible pour votre maison et des économies que vous pourrez réaliser.</p>
             </div>
@@ -790,7 +774,7 @@ ga('send', 'pageview');
         <div style="padding: 8px 0;">
           <div class="sib-input sib-form-block">
             <div class="form__entry entry_block">
-              <div class="form__label-row ">
+              <div class="form__label-row form__label-row--horizontal">
                 <label class="entry__label" style=" font-size:16px; text-align:left; font-weight:700; font-family:" helvetica sans-serif color: border-width:px for="EMAIL" data-required="*">
                   Votre email
                 </label>
@@ -815,36 +799,12 @@ ga('send', 'pageview');
             </div>
           </div>
         </div>
-
-        <input type="text" name="email_address_check" value="" class="input--hidden"><input type="hidden" name="locale" value="fr"></form>
+        <input type="text" name="email_address_check" value="" class="input--hidden"><input type="hidden" name="locale" value="fr"><input type="hidden" name="html_type" value="simple"></form>
     </div>
   </div>
 </div>
 
-
-
-<script>
-  window.REQUIRED_CODE_ERROR_MESSAGE = 'Veuillez choisir un code pays';
-
-  window.EMAIL_INVALID_MESSAGE = window.SMS_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
-
-  window.REQUIRED_ERROR_MESSAGE = "This field cannot be left blank. ";
-
-  window.GENERIC_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
-
-
-
-
-  window.translation = {
-    common: {
-      selectedList: '{quantity} liste sélectionnée',
-      selectedLists: '{quantity} listes sélectionnées'
-    }
-  };
-
-  var AUTOHIDE = Boolean(0);
-</script><script src="https://sibforms.com/forms/end-form/build/main.js">
-</script><script src="https://www.google.com/recaptcha/api.js?hl=fr"></script></div>
+        </div>
         <div class="exitpopup-modal-footer">
           <p></p>
         </div>
