--- a/wp_sunberry/fabriquer-chauffage-solaire/index.html
+++ b/wp_sunberry/fabriquer-chauffage-solaire/index.html
@@ -715,8 +715,8 @@ ga('send', 'pageview');
 
     <div id="exitpopup-modal">
       <div class="underlay"></div>
-	  <div class="exitpopup-modal-window" style="width:500px !important; height:400px !important;">
-        <div class="modal-title" style="background-color:#ffffff !important;">
+	  <div class="exitpopup-modal-window" style="width:600px !important; height:500px !important;">
+        <div class="modal-title" style="background-color:#9856ef !important;">
           <h3>Combien pourriez vous économiser ?</h3>
         </div>
         <div class="modal-body">
