--- a/inscription-a-la-formation-pack1098/index.html
+++ b/inscription-a-la-formation-pack1098/index.html
@@ -538,7 +538,7 @@ ga('send', 'pageview');
     onApprove: function(data, actions) {
       return actions.order.capture().then(function(details) {
         //alert('Inscription reussie ! vous allez recevoir votre formation par email ');
-        window.location.href='https://www.sunberry.fr/confirmation-paypal'
+        window.location.href='https://www.sunberry.fr/confirmation-paypal-pack'
         // Call your server to save the transaction
         return fetch('/paypal-transaction-complete', {
           method: 'post',
