WP2Static UPDATE inscription-formation-solaire/index.html

--- a/inscription-formation-solaire/index.html
+++ b/inscription-formation-solaire/index.html
@@ -577,9 +577,9 @@ Cela vous permet de vous former à un prix défiant toute concurrence.<br><br>Pa
 				<div class="elementor-widget-container">
 						<span class="elementor-title">Disponibilité</span>
 		
-		<div class="elementor-progress-wrapper" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="60" aria-valuetext="Fin été 2019">
+		<div class="elementor-progress-wrapper" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="60" aria-valuetext="Fin 2019">
 			<div class="elementor-progress-bar" data-max="60">
-				<span class="elementor-progress-text">Fin été 2019</span>
+				<span class="elementor-progress-text">Fin 2019</span>
 									<span class="elementor-progress-percentage">60%</span>
 							</div>
 		</div>
@@ -640,9 +640,9 @@ Cela vous permet de vous former à un prix défiant toute concurrence.<br><br>Pa
 				<div class="elementor-widget-container">
 						<span class="elementor-title">Disponibilité</span>
 		
-		<div class="elementor-progress-wrapper" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="60" aria-valuetext="Fin 2019">
+		<div class="elementor-progress-wrapper" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="60" aria-valuetext="Début 2020">
 			<div class="elementor-progress-bar" data-max="60">
-				<span class="elementor-progress-text">Fin 2019</span>
+				<span class="elementor-progress-text">Début 2020</span>
 									<span class="elementor-progress-percentage">60%</span>
 							</div>
 		</div>
@@ -703,9 +703,9 @@ Cela vous permet de vous former à un prix défiant toute concurrence.<br><br>Pa
 				<div class="elementor-widget-container">
 						<span class="elementor-title">Disponibilité</span>
 		
-		<div class="elementor-progress-wrapper" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50" aria-valuetext="Fin 2019">
+		<div class="elementor-progress-wrapper" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50" aria-valuetext="Début 2020">
 			<div class="elementor-progress-bar" data-max="50">
-				<span class="elementor-progress-text">Fin 2019</span>
+				<span class="elementor-progress-text">Début 2020</span>
 									<span class="elementor-progress-percentage">50%</span>
 							</div>
 		</div>
