WP2Static UPDATE panneaux-solaires-thermiques-auto-construits/feed/index.html

--- a/panneaux-solaires-thermiques-auto-construits/feed/index.html
+++ b/panneaux-solaires-thermiques-auto-construits/feed/index.html
@@ -13,7 +13,7 @@
 	<link>http://www.sunberry.fr/</link>
 	<description>Le chauffage solaire à construire soit même</description>
 	<lastBuildDate>
-	Fri, 03 Apr 2020 10:13:53 +0000	</lastBuildDate>
+	Fri, 03 Apr 2020 15:03:46 +0000	</lastBuildDate>
 	<language>fr-FR</language>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
@@ -36,11 +36,11 @@
 				<category><![CDATA[Panneaux solaires thermiques auto-construits]]></category>
 
 		<guid isPermaLink="false">https://www.sunberry.fr/?p=1123</guid>
-				<description><![CDATA[<p>Une chauffe eau solaire pour Tiny House Marco, un membre Sunberry situé dans le Gers nous présente son chauffe eau solaire, qui alimente en eau chaude sa tiny-house. Une très belle réalisation, propre et bien finie qui fait plaisir à voir. Et les résultats sont à la hauteur des espérances,<a class="moretag" href="https://www.sunberry.fr/panneaux-solaires-thermiques-auto-construits/chauffe-eau-solaire-diy-gers/"> Lire la suite&#8230;</a></p>
+				<description><![CDATA[<p>Un chauffe eau solaire pour Tiny House Marco, un membre Sunberry situé dans le Gers nous présente son chauffe eau solaire, qui alimente en eau chaude sa tiny-house. Une très belle réalisation, propre et bien finie qui fait plaisir à voir. Et les résultats sont à la hauteur des espérances,<a class="moretag" href="https://www.sunberry.fr/panneaux-solaires-thermiques-auto-construits/chauffe-eau-solaire-diy-gers/"> Lire la suite&#8230;</a></p>
 <p>L’article <a rel="nofollow" href="https://www.sunberry.fr/panneaux-solaires-thermiques-auto-construits/chauffe-eau-solaire-diy-gers/">Chauffe-eau solaire dans le Gers</a> est apparu en premier sur <a rel="nofollow" href="http://www.sunberry.fr/">Chauffage Solaire DIY - Sunberry</a>.</p>
 ]]></description>
 								<content:encoded><![CDATA[
-<h2>Une chauffe eau solaire pour Tiny House</h2>
+<h2>Un chauffe eau solaire pour Tiny House</h2>
 
 
 
@@ -64,7 +64,7 @@
 
 
 
-<blockquote class="wp-block-quote"><p>En tout cas, je suis très heureux d&rsquo;avoir réussi à fabriquer mes panneaux, le circuit caloporteur et le circuit électronique. C&rsquo;est très satisfaisant ! Et pour l&rsquo;instant, ça fonctionne. Pas parfaitement… mais j&rsquo;espère que l&rsquo;entraide sur ce forum permettra à tous d&rsquo;avancer dans nos projets respectifs !</p></blockquote>
+<blockquote class="wp-block-quote"><p>Nous vivons à deux dans une Tiny House autonome en électricité (panneaux photovoltaïques). Mon souhait : arriver à chauffer un ballon de 200l (la famille s&rsquo;agrandira à l&rsquo;avenir !) posé à l&rsquo;extérieur (car pas de place dans la maison qui fait 15m2 au sol). L&rsquo;eau chaude sanitaire est actuellement chauffée par un chauffe eau instantané au gaz. Celui-ci a une fonction « eau chaude solaire » : s&rsquo;il détecte une eau chaude suffisamment chaude en entrée, il ne se déclenchera pas ; s&rsquo;il l&rsquo;eau est préchauffée, il consommera que le gaz nécessaire pour l&rsquo;amener à la température choisie.</p><p>En tout cas, je suis très heureux d&rsquo;avoir réussi à fabriquer mes panneaux, le circuit caloporteur et le circuit électronique. C&rsquo;est très satisfaisant ! Et pour l&rsquo;instant, ça fonctionne. Pas parfaitement… mais j&rsquo;espère que l&rsquo;entraide sur ce forum permettra à tous d&rsquo;avancer dans nos projets respectifs !</p></blockquote>
 
 
 
