WP2Static UPDATE inscription-a-la-formation-pack1098/index.html

--- a/inscription-a-la-formation-pack1098/index.html
+++ b/inscription-a-la-formation-pack1098/index.html
@@ -964,9 +964,9 @@ if (waitImage == undefined) {
 				<div class="elementor-widget-container">
 						<span class="elementor-title">Disponibilité</span>
 		
-		<div class="elementor-progress-wrapper" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="60" aria-valuetext="Fin été 2019">
+		<div class="elementor-progress-wrapper" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="60" aria-valuetext="Fin été 2020">
 			<div class="elementor-progress-bar" data-max="60">
-				<span class="elementor-progress-text">Fin été 2019</span>
+				<span class="elementor-progress-text">Fin été 2020</span>
 									<span class="elementor-progress-percentage">60%</span>
 							</div>
 		</div>
@@ -986,10 +986,10 @@ if (waitImage == undefined) {
 				<div class="elementor-widget-container">
 						<span class="elementor-title">Disponibilité</span>
 		
-		<div class="elementor-progress-wrapper" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="60" aria-valuetext="Fin 2019">
-			<div class="elementor-progress-bar" data-max="60">
-				<span class="elementor-progress-text">Fin 2019</span>
-									<span class="elementor-progress-percentage">60%</span>
+		<div class="elementor-progress-wrapper" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="80" aria-valuetext="Mi 2020">
+			<div class="elementor-progress-bar" data-max="80">
+				<span class="elementor-progress-text">Mi 2020</span>
+									<span class="elementor-progress-percentage">80%</span>
 							</div>
 		</div>
 				</div>
@@ -1008,9 +1008,9 @@ if (waitImage == undefined) {
 				<div class="elementor-widget-container">
 						<span class="elementor-title">Disponibilité</span>
 		
-		<div class="elementor-progress-wrapper" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50" aria-valuetext="Fin 2019">
+		<div class="elementor-progress-wrapper" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50" aria-valuetext="Fin 2020">
 			<div class="elementor-progress-bar" data-max="50">
-				<span class="elementor-progress-text">Fin 2019</span>
+				<span class="elementor-progress-text">Fin 2020</span>
 									<span class="elementor-progress-percentage">50%</span>
 							</div>
 		</div>
